cmake_minimum_required (VERSION 2.6)
project (utilsTest)
file (GLOB UtilsTestSources *.cpp)

add_executable(${PROJECT_NAME} ${UtilsTestSources})
if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    target_link_libraries(${PROJECT_NAME} utils gtest gtest_main rt)
else()
    target_link_libraries(${PROJECT_NAME} utils gtest gtest_main)
endif()
add_test(${PROJECT_NAME} ${PROJECT_NAME})
